# PDP_Jags

./: .gitignore  CMakeLists.txt  FindJAGS.cmake
cmake/tests/: read_jags_version.cpp
examples/R/: choices.csv  estimation.R  estimation.bugs  init.R  init_multi.R  simulate.R  simulate_multi.R  trials.csv
examples/cpp/: CMakeLists.txt  test.cpp  test2.cpp
src/: CMakeLists.txt  Pdp.cpp  config.h.in
src/functions/: BiLink.cpp  BiLink.hpp  BiasInput.cpp  BiasInput.hpp  CMakeLists.txt  ConnectNodes.hpp  Link.cpp  Link.hpp  LuceChc.cpp  LuceChc.hpp  MakeNetwork.cpp  MakeNetwork.hpp  Net2Mat.cpp  Net2Mat.hpp  Simulate.cpp  Simulate.hpp  Tau.cpp  Tau.hpp
src/helpers/: Assert.hpp  CMakeLists.txt  FixedWidthList.hpp  JagsArray.hpp  Memory.hpp  MemoryBlock.hpp  MemorySection.hpp  NetworkTemplate.hpp  PDP.cpp  RingPointer.hpp  VecDispatcher.hpp
src/include/: EigenAlgebra.hpp  PDP.hpp
