cmake_minimum_required(VERSION 3.7)
project(pdp_jags VERSION 0.0.1 DESCRIPTION "PDP functions for JAGS" LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR})

find_package(JAGS REQUIRED)

include_directories(${JAGS_INCLUDE_DIRS})

ADD_LIBRARY(pdp SHARED src/Pdp.cpp)
set_target_properties(pdp PROPERTIES PREFIX "")
INSTALL(
	TARGETS pdp 
	CONFIGURATIONS Release
	DESTINATION ${JAGS_MODULE_DIR}
)